[gd_scene load_steps=3 format=3 uid="uid://ilmoh26sbmoy"]

[ext_resource type="Script" path="res://Scripts/OptionsPage.gd" id="1_hveqb"]
[ext_resource type="AudioStream" uid="uid://cnfuttebxl5sc" path="res://Sounds/kara.mp3" id="2_qelco"]

[node name="OptionsPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hveqb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 657.0
color = Color(0.752941, 1, 1, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 211.0
offset_right = 353.0
offset_bottom = 309.0
text = "Menu"

[node name="Volume" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 145.0
offset_top = 359.0
offset_right = 507.0
offset_bottom = 496.0
max_value = 1.0
step = 0.0

[node name="volumeTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qelco")
bus = &"volControl"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="drag_ended" from="Volume" to="." method="_on_volume_drag_ended"]
[connection signal="value_changed" from="Volume" to="." method="_on_new_volume"]
